[BE] fix: 도커 컴포즈내 설정을 도커파일내로 변경해서 설정